--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
 </head>
 
 <body>
+
+    <!--Logo-->
+    <header>
+        
+
+
+
+    </header>
+
+
+    <!--Button Section-->
+    <section>
+
+
+
+    </section>
+
+
+    <!--Todo List-->
+    <main>
+
+
+
+    </main>
     
 </body>
 </html>
