css link, logo and button section

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toboolist</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<body class="bg-gray">
 
     <!--Logo-->
     <header>
+        <img src="./img/Toboolist-logo.jpg" alt="Logo toboolist">
         
 
 
@@ -20,6 +22,9 @@
 
     <!--Button Section-->
     <section>
+
+        <button class="bg-blue">Add Task</button>
+        <button>Add Section</button>
 
 
 
