Fixed margins and buttons

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="bg-gray">
+<body>
 
     <!--Logo-->
-    <header>
-        <img src="./img/Toboolist-logo.jpg" alt="Logo toboolist">
+    <header class="bg-white" id="logo-padding">
+        <img src="./img/Toboolist-logo.jpg" alt="Logo toboolist" height="48px">
         
 
 
@@ -21,10 +21,10 @@
 
 
     <!--Button Section-->
-    <section>
+    <section class="box-margin-width bg-white">
 
         <button class="bg-blue">Add Task</button>
-        <button>Add Section</button>
+        <button class="bg-white">Add Section</button>
 
 
 
