Added div to header

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 <body>
 
     <!--Logo-->
-    <header class="bg-white" id="logo-padding">
-        <img src="./img/Toboolist-logo.jpg" alt="Logo toboolist" height="48px">
-        
+    <header>
 
+        <div class="bg-white" id="logo-padding">
+
+            <img src="./img/Toboolist-logo.jpg" alt="Logo toboolist" height="48px">
+        
+        </div>
 
 
     </header>
